# qmt-gateway

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup-venv.bat  start-qmt-gateway.bat
.dev/specs/: init-wizard-e2e-test-plan.md  windows-installer.md
.github/workflows/: build-installer.yml
docs/: api.md  know-how.md  quote-bar-synthesis.md
docs/issues/: qmt-not-running-dialog.md
installer/: README.md  create-shortcuts.ps1  fetch-static-assets.py  generate-bitmaps.ps1  generate-icon.py  generate-requirements.py  install-python.ps1  installer.nsi  kill-qmt-gateway-procs.ps1  refresh-contact-bmp.ps1  register-task.ps1  scrub-stale-installs.ps1  start-silent.bat  start-silent.vbs  start.bat  task-template.xml  uninstall.bat  wait-and-open-browser.ps1
qmt_gateway/: __main__.py  access_log.py  app.py  auth.py  config.py  qmt_init_helpers.py  qmt_login_automation.py  qmt_restart.py  qmt_restart_helper.py  trading.py  tray.py  xtquant_probe.py
qmt_gateway/apis/: __init__.py  api_keys.py  (+8 more)
tests/: test_auction.py  test_autostart.py  test_crypto_auto_start.py  test_firewall.py  test_init_wizard.py  test_installer_nsi.py  test_logging_levels.py  test_logs_page.py  test_main_layout.py  test_pip_mirror.py  test_port.py  test_qmt_login_automation.py  test_qmt_restart_helper.py  test_quote_perf.py  test_quote_volume_amount.py  test_scrub_stale_installs.py  test_security_features.py  test_services_port.py  test_single_instance.py  test_smoke.py  test_stock_api.py  test_trade_service.py  test_trading_page.py  test_tray.py  test_updater.py  test_xtwrapper.py
(+21 files in other folders)
