[project]
name = "qmt-gateway"
version = "0.1.0"
description = "Windows-only QMT gateway service for live trading and real-time market data"
readme = "README.md"
requires-python = ">=3.13,<4.0"
authors = [
  { name = "aaron yang", email = "aaron_yang@jieyu.ai" },
]
dependencies = [
  "apscheduler==3.10.4",
  "bcrypt==5.0.0",
  "loguru==0.7.3",
  "monsterui==1.0.36",
  "pyarrow==19.0.1",
  "pypinyin==0.53.0",
  "pywinauto==0.6.9",
  "python-fasthtml==0.12.36",
  "sqlite-utils==3.39",
  "starlette==0.37.2",
  "uvicorn==0.34.0",
]

[project.scripts]
qmt-gateway = "qmt_gateway.__main__:main"
qmt-gateway-xtprobe = "qmt_gateway.xtquant_probe:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qmt_gateway*"]

[dependency-groups]
dev = [
  "black>=22.3.0,<23.0.0",
  "pytest>=8.3.5,<9.0.0",
  "pytest-cov>=7.0.0,<8.0.0",
  "ruff>=0.11.0,<0.12.0",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
